--- a/mkosi.images/initrd/mkosi.extra/usr/lib/systemd/system/systemd-cryptsetup-by-x@.service
+++ b/mkosi.images/initrd/mkosi.extra/usr/lib/systemd/system/systemd-cryptsetup-by-x@.service
@@ -3,11 +3,13 @@ Description=dm-crypt setup for luks-%I
 Documentation=man:crypttab(5) man:systemd-cryptsetup-generator(8) man:systemd-cryptsetup@.service(8)
 
 DefaultDependencies=no
-Wants=cryptsetup-pre.target
 After=cryptsetup-pre.target systemd-udevd-kernel.socket
-Before=blockdev@dev-mapper-luks\x2d%i.target
+After=initrd-format-disk@%i.target
+After=systemd-random-seed.service
 Wants=blockdev@dev-mapper-luks\x2d%i.target
-IgnoreOnIsolate=true
+Before=blockdev@dev-mapper-luks\x2d%i.target
+Before=cryptsetup.target
+IgnoreOnIsolate=yes
 Conflicts=umount.target
 Before=umount.target
 BindsTo=dev-disk-by\x2d%j-%i.device
@@ -20,5 +22,6 @@ TimeoutSec=infinity
 KeyringMode=shared
 OOMScoreAdjust=500
 Environment="CRYPTSETUP_OPTIONS=luks,fido2-device=auto,tpm2-device=auto"
-ExecStart=/usr/lib/systemd/systemd-cryptsetup attach 'luks-%I' '/dev/disk/by-%J/%I' '-' "${CRYPTSETUP_OPTIONS}"
+Environment="CRYPTSETUP_KEYFILE=-"
+ExecStart=/usr/lib/systemd/systemd-cryptsetup attach 'luks-%I' '/dev/disk/by-%J/%I' "${CRYPTSETUP_KEYFILE}" "${CRYPTSETUP_OPTIONS}"
 ExecStop=/usr/lib/systemd/systemd-cryptsetup detach 'luks-%I'
